fix: Fix spacing between buttons

--- a/src/scss/components/navigation.module.scss
+++ b/src/scss/components/navigation.module.scss
@@ -23,7 +23,6 @@
 }
 
 .separator:not(:first-child) {
-  display: inline-block;
   width: 100%;
   content: "";
   border-top: 1px solid;
